ACPI / video: Add a quirk to force acpi-video backlight on SAMSUNG 530U4E/540U4E

The native interface on SAMSUNG 530U4E/540U4E doesn't work even though
the firmware claims Win8 compatible while the acpi_video interface
works, add a quirk for this.

Link: https://bugzilla.kernel.org/show_bug.cgi?id=108971
Reported-and-tested-by: adam bk <adamdd55@gmail.com>
Signed-off-by: Aaron Lu <aaron.lu@intel.com>
Signed-off-by: Rafael J. Wysocki <rafael.j.wysocki@intel.com>